# azure-sdk-for-python

./: .gitignore
.coding-harness/: feedback-response-2.json  implementation-state.json  review-feedback-1.json  review-feedback-2.json  review-feedback-3.json  spec.json
.github/: CODEOWNERS
sdk/cosmos/: ci.yml
sdk/cosmos/.temp/: pr-41588-stat.txt
sdk/cosmos/azure-cosmos/: CHANGELOG.md  MIRROR_INTEGRATION_REPORT.md  MIRROR_INTEGRATION_SUMMARY.md  MIRROR_QUICKSTART.md  README.md  cspell.json  explore_data.py  python-diagnostics  test_fabric_diagnostic.py  test_mirror_comprehensive.py  test_mirror_direct.py  test_mirror_e2e.py  test_mirror_integration.py  test_mirror_simple.py  test_mirror_unit.py  test_per_request_mirror.py  test_quick.py
sdk/cosmos/azure-cosmos-fabric-mapper/: .cspell.json  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
sdk/cosmos/azure-cosmos-fabric-mapper/src/azure_cosmos_fabric_mapper/: __init__.py  config.py  credentials.py  diagnostics.py  errors.py
sdk/cosmos/azure-cosmos-fabric-mapper/src/azure_cosmos_fabric_mapper/driver/: __init__.py  base.py  mssql_driver.py  pyodbc_driver.py
sdk/cosmos/azure-cosmos-fabric-mapper/src/azure_cosmos_fabric_mapper/results/: __init__.py  mapper.py
sdk/cosmos/azure-cosmos-fabric-mapper/src/azure_cosmos_fabric_mapper/sdk_hook/: __init__.py  contract.py
sdk/cosmos/azure-cosmos-fabric-mapper/src/azure_cosmos_fabric_mapper/translate/: __init__.py  ast.py  fabric_sql.py  parameters.py  parser.py
sdk/cosmos/azure-cosmos-fabric-mapper/tests/integration/: test_e2e_cosmos_fabric_comparison.py  test_fabric_mirror_e2e.py
sdk/cosmos/azure-cosmos-fabric-mapper/tests/unit/: test_parameterization.py  test_parser_keywords.py  test_redaction.py  test_result_mapping.py  test_translation_golden.py
sdk/cosmos/azure-cosmos/samples/: examples.py  mirror_serving_query.py
sdk/cosmos/azure-cosmos/test/: demo-1.py  demo-2.py  demo-4.py  demo-5.py  demo-reads-1.py  demo-reads-3.py  demo-sync.py  demo-writes-1.py  demo-writes-2.py  demo-writes-3.py  writes_concurrent.py  (+2 more)
(+67 files in other folders)
