[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "azure-cosmos-fabric-mapper"
version = "0.1.0"
description = "Optional mapper that translates Azure Cosmos DB query shapes to Fabric mirror SQL and maps results back."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
keywords = ["azure", "cosmosdb", "fabric", "mirroring", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "lark>=1.1.9",
  "azure-identity>=1.16.0",
  "azure-core>=1.30.0",
]

[project.urls]
Homepage = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk/cosmos/azure-cosmos-fabric-mapper"

[project.optional-dependencies]
# Primary SQL driver (pure Python, no system dependencies on Windows)
sql = ["mssql-python>=1.0.0"]
# Legacy support for pyodbc users (requires system ODBC driver)
odbc = ["pyodbc>=5.1.0"]
# Cosmos SDK integration (optional, for testing SDK integration)
cosmos = ["azure-cosmos>=4.7.0"]
# Development dependencies
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
  "e2e: marks tests as end-to-end tests requiring live services (deselect with '-m \"not e2e\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/azure_cosmos_fabric_mapper"]
